# icub-estimation-datasets-logger

./: README.md
scripts/: startup-walking-dumper.xml  walking-dumper.xml
scripts/data-dumper/: fbedevice-dumper.xml  realsense-dumper.xml  transforms-dumper.xml  vicon-dumper.xml  walking-dumper-min.xml  walking-dumper-sim-min.xml  walking-dumper-sim.xml  walking-dumper.xml
scripts/data-parser/matlab/: YarpViconParser.m  baseMountMarkerTrajGenerator.m  matGenerator.m  matGeneratorWithoutTimeSync.m  parseFootWrench.m  parseGazeboBaseState.m  parseInertial.m  parseRGBImages.m  parseStateExt.m  prepareStateExtFormatString.m  testViconParser.m
scripts/launch/yarprobotinterf/: realsenseinterf.xml
tools/viconSegmentTrajectoryGenerator/: CMakeLists.txt  README.md  ResourceFolderPath.h.in
tools/viconSegmentTrajectoryGenerator/include/: MatHandler.hpp  PointCloudUtils.hpp  SegmentData.hpp
tools/viconSegmentTrajectoryGenerator/resources/: vicon-marker-traj.mat  vicon-mount-model.pcd  vicon-mount-model.xyz
tools/viconSegmentTrajectoryGenerator/src/: MatHandler.cpp  main.cpp
